# arpack-ng

./: .clang-format  .codecov.yml  .gitignore  .hgignore  .travis.yml  ARmake.inc  CHANGES  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  PARPACK_CHANGES  README  README.md  TODO  aclocal.m4  arpack-ng-config-version.cmake.in  arpack-ng-config.cmake.in  arpack.h  arpack.hpp  arpack.pc  arpack.pc.in  arpackdef.cmake.h.in  arpackdef.h.in  arpackicb.h.in  configure  configure.ac  dbgini.f  debug-arpack.h  debug.h  debug_icb.f90  debug_init.f  debug_init.f90  detect_arpack_bug.m4  install.sh  parpack.h  parpack.hpp  siseed.f  staini.f  stat_init.f90  (+1 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
ARMAKES/: ARmake.BLACS-CJ  ARmake.BLACS-NX-I860  ARmake.BLACS-SGI  ARmake.BLACS-SGI_mp  ARmake.BLACS-SP2  ARmake.BLACS-SUN4  ARmake.BLACS-T3D  ARmake.CJ  ARmake.MPI-CJ  ARmake.MPI-SP2  ARmake.MPI-SUN4  ARmake.MPI-T3D  ARmake.MPI-sunmos  ARmake.SGI  ARmake.SGI_mp  ARmake.SP2  ARmake.SUN4
ARPACK/: ARmake.inc  Makefile
DOCUMENTS/: debug.doc
EXAMPLES/BAND/: CMakeLists.txt  Makefile.am  Makefile.in  cnband.f  cnbdr1.f  cnbdr2.f  cnbdr3.f  cnbdr4.f  dnband.f  dnbdr1.f  dnbdr2.f  dnbdr3.f  dnbdr4.f  dnbdr5.f  dnbdr6.f  dsband.f  dsbdr1.f  dsbdr2.f  dsbdr3.f  dsbdr4.f  dsbdr5.f  dsbdr6.f  makefile  snband.f  snbdr1.f  snbdr2.f  snbdr3.f  snbdr4.f  snbdr5.f  snbdr6.f  ssband.f  ssbdr1.f  ssbdr2.f  ssbdr3.f  ssbdr4.f  ssbdr5.f  ssbdr6.f  znband.f  znbdr1.f  znbdr2.f  (+2 more)
EXAMPLES/COMPLEX/: CMakeLists.txt  Makefile.am  Makefile.in  cndrv1.f  cndrv2.f  cndrv3.f  cndrv4.f  zndrv1.f  zndrv2.f  zndrv3.f  zndrv4.f
EXAMPLES/MATRIX_MARKET/: An.mtx  As.mtx  Az.mtx  B.mtx  Bz.mtx  CMakeLists.txt  Makefile.am  README  arpackSolver.hpp  arpackSolver.pc.in  arpackmm.cpp  arpackmm.sh  issue215.mtx  issue215.sh  issue401.mtx  issue401.sh
EXAMPLES/NONSYM/: CMakeLists.txt  Makefile.am  Makefile.in  README  dndrv1.f  dndrv2.f  dndrv3.f  dndrv4.f  dndrv5.f  dndrv6.f  sndrv1.f  sndrv2.f  sndrv3.f  sndrv4.f  sndrv5.f  sndrv6.f
EXAMPLES/PYARPACK/: CMakeLists.txt  Makefile.am  README  pyarpack.cpp  pyarpackDenseLDLT.py.in  pyarpackDenseLLT.py.in  pyarpackDenseLUPP.py.in  pyarpackDenseLURR.py  pyarpackDenseLURR.py.in  pyarpackDenseQRPP.py.in  pyarpackDenseQRRR.py  pyarpackDenseQRRR.py.in  pyarpackDrtSolver.hpp  pyarpackItrSolver.hpp  pyarpackRestart.py.in  pyarpackServices.hpp  pyarpackSparseBiCGDiag.py  pyarpackSparseBiCGDiag.py.in  pyarpackSparseBiCGILU.py.in  pyarpackSparseCGDiag.py  pyarpackSparseCGDiag.py.in  pyarpackSparseCGILU.py  pyarpackSparseCGILU.py.in  pyarpackSparseLDLT.py.in  pyarpackSparseLLT.py  pyarpackSparseLLT.py.in  pyarpackSparseLU.py.in  pyarpackSparseQR.py.in
EXAMPLES/SIMPLE/: CMakeLists.txt  Makefile.am  Makefile.in  README  cnsimp.f  dnsimp.f  dssimp.f  makefile  snsimp.f  sssimp.f  znsimp.f
EXAMPLES/SYM/: CMakeLists.txt  Makefile.am  Makefile.in  README  dsdrv1.f  dsdrv2.f  dsdrv3.f  dsdrv4.f  dsdrv5.f  dsdrv6.f  ssdrv1.f  ssdrv2.f  ssdrv3.f  ssdrv4.f  ssdrv5.f  ssdrv6.f
ICB/: Makefile.am  arpack.h  arpack.hpp  debug_c.h  debug_c.hpp  debug_icb.F90  iseed_c.h  iseed_c.hpp  iseed_icb.F90  parpack.h  parpack.hpp  stat_c.h  stat_c.hpp  stat_icb.F90  stat_icb.f90
LAPACK/: Makefile.am
PARPACK/: Makefile.am  Makefile.in
PARPACK/EXAMPLES/BLACS/: Makefile.am  Makefile.in  debug-arpack.h  makefile  pcndrv1.f  pdndrv1.f  pdndrv3.f  pdntest1.f  pdsdrv1.f  psndrv1.f  psndrv3.f  psntest1.f  pssdrv1.f  pzndrv1.f
PARPACK/EXAMPLES/MPI/: CMakeLists.txt  Makefile.am  Makefile.in  README.CALLING-PARPACK-FROM-C-OR-CPP  makefile  mpif.h  pcndrv1.F90  pcndrv1.f  pdndrv1.F90  pdndrv1.f  pdndrv3.F90  pdndrv3.f  pdsdrv1.F90  pdsdrv1.f  psndrv1.F90  psndrv1.f  psndrv3.F90  psndrv3.f  pssdrv1.F90  pssdrv1.f  pzndrv1.F90  pzndrv1.f
PARPACK/SRC/: Makefile.am  Makefile.in
PARPACK/SRC/BLACS/: Makefile  Makefile.am  Makefile.in  pcgetv0.f  pclarnv.f  pcnaitr.f  pcnapps.f  pcnaup2.f  pcnaupd.f  pcneigh.f  pcneupd.f  pcngets.f  pdgetv0.f  pdlamch.f  pdlarnv.f  pdnaitr.f  pdnapps.f  pdnaup2.f  pdnaupd.f  pdneigh.f  pdneupd.f  pdngets.f  pdnorm2.f  pdsaitr.f  pdsapps.f  pdsaup2.f  pdsaupd.f  pdseigt.f  pdseupd.f  pdsgets.f  pdznorm2.f  pscnorm2.f  psgetv0.f  pslamch.f  pslarnv.f  psnaitr.f  psnapps.f  psnaup2.f  psnaupd.f  psneigh.f  (+19 more)
PARPACK/SRC/MPI/: Makefile  Makefile.am  Makefile.in  icbpcn.F90  icbpcn.f90  icbpdn.F90  icbpdn.f90  icbpds.F90  icbpds.f90  icbpsn.F90  icbpsn.f90  icbpss.F90  icbpss.f90  icbpzn.F90  icbpzn.f90  parpack.pc.in  pcgetv0.F90  pcgetv0.f  pclarnv.F90  pcnaitr.F90  pcnaitr.f  pcnapps.F90  pcnapps.f  pcnaup2.F90  pcnaup2.f  pcnaupd.F90  pcnaupd.f  pcneigh.F90  pcneigh.f  pcneupd.F90  pcneupd.f  pcngets.F90  pcngets.f  pcontext.F90  pcontext.f  pcontext.h  pcontextF90.h  pdgetv0.F90  pdgetv0.f  pdlamch10.F90  (+92 more)
PARPACK/TESTS/MPI/: CMakeLists.txt  Makefile.am  icb_parpack_c.c  icb_parpack_cpp.cpp  issue46.F90  issue46.f
PARPACK/UTIL/: Makefile.am  Makefile.in
PARPACK/UTIL/BLACS/: Makefile  Makefile.am  Makefile.in  pcmout.f  pcvout.f  pdmout.f  pdvout.f  pivout.f  psmout.f  psvout.f  pzmout.f  pzvout.f
PARPACK/UTIL/MPI/: Makefile  Makefile.am  Makefile.in  pcmout.F90  pcmout.f  pcvout.F90  pcvout.f  pdmout.F90  pdmout.f  pdvout.F90  pdvout.f  pivout.F90  pivout.f  psmout.F90  psmout.f  psvout.F90  psvout.f  pzmout.F90  pzmout.f  pzvout.F90  pzvout.f
SRC/: Makefile  Makefile.am  Makefile.in  arpack.pc.in  cgetv0.f  cnaitr.f  cnapps.f  cnaup2.f  cnaupd.f  cneigh.f  cneupd.f  cneupd.f.rej  cngets.f  csortc.f  dgetv0.f  dlahqr2.f  dnaitr.f  dnapps.f  dnaup2.f  dnaupd.f  dnconv.f  dneigh.f  dneupd.f  dneupd.f.rej  dngets.f  dsaitr.f  dsapps.f  dsaup2.f  dsaupd.f  dsconv.f  dseigt.f  dsesrt.f  dseupd.f  dseupd.f.rej  dsgets.f  dsortc.f  dsortr.f  icbacn.F90  icbacn.f90  icbadn.F90  (+42 more)
TESTS/: CMakeLists.txt  Makefile.am  Makefile.in  bug_1315_double.c  bug_1315_single.c  bug_1323.f  bug_142.f  bug_142_gen.f  bug_58_double.f  bug_79_double_complex.f  dnsimp.f  icb_arpack_c.c  icb_arpack_cpp.cpp  iso_c_binding_c.c  iso_c_binding_cpp.cpp  mmio.f  test-dnsimp.sh  testA.mtx
(+97 files in other folders)
